Fixed Product Specifications section.  Can't animate tables, so stuck it in a wrapped div, and animated the wrapper.

--- a/app/webroot/css/pages/product.scss
+++ b/app/webroot/css/pages/product.scss
@@ -197,7 +197,7 @@
             
         }
         .content{ 
-			margin-top: 10px;
+			padding-top: 10px;
             clear: both;
             float: left;
             width: 100%;
